landing page design

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -968,8 +968,7 @@
     background: linear-gradient(135deg, var(--bg-primary) 0%, #70bc4f 100%);
   }
 .footer {
-    /* background: linear-gradient(rgba(102, 16, 242, 0.05), rgba(102, 16, 242, 0.05)); */
-    background: var(--bg-gradient);
+    background: linear-gradient(rgba(102, 16, 242, 0.05), rgba(102, 16, 242, 0.05));
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -985,7 +984,6 @@
 }
 
 .footer .footer-item a:hover {
-    letter-spacing: 2px;
     color: var(--bs-primary);
 }
 
