--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,10 +29,8 @@
 }
 
 /* Hamburger transitions for smoother toggling */
-.hamburger-box,
-.collapse {
-  transition: all 0.3s ease-in-out;
-}
+
+/*  */
 
 
 /*** Button Start ***/
@@ -40,12 +38,10 @@
     font-weight: 600;
     transition: .5s;
 }
-
 .btn-square {
     width: 32px;
     height: 32px;
 }
-
 .btn-sm-square {
     width: 34px;
     height: 34px;
@@ -967,15 +963,18 @@
 .gradient-bg {
     background: linear-gradient(135deg, var(--bg-primary) 0%, #70bc4f 100%);
   }
-.footer {
-    background: linear-gradient(rgba(102, 16, 242, 0.05), rgba(102, 16, 242, 0.05));
+  .footer, .copyright {
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../img/footer-v1-pattern.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.footer .footer-item h4 {
+    color: #70bc4f;
+}
 .footer .footer-item a {
     line-height: 35px;
-    color: var(--bs-dark);
+    color: var(--bs-gray);
     transition: 0.5s;
 }
 
@@ -984,14 +983,16 @@
 }
 
 .footer .footer-item a:hover {
-    color: var(--bs-primary);
+    color: var(--bs-secondary);
 }
-
 /*** Footer End ***/
 
 /*** copyright Start ***/
+
 .copyright {
     border-top: 1px solid rgba(255, 255, 255, 0.08);
-    background: var(--bs-dark) !important;
+}
+.copyright .owner:hover {
+    color: #70bc4f;
 }
 /*** copyright end ***/
